src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");

:root {
  /* COLORS */
  --blue: #002f6c;
  --white: #fff;
  --gray: rgb(164, 160, 160);
  --black: #08111f;
  --dark-gray: #070707a1;

  /* FONT-FAMILY */
  --main-text: "Montserrat", sans-serif;

  /*** === FONT-WEIGHT === ***/
  --bold: 600;
  --bolder: 700;
  --boldest: 900;

  /* FONT-SIZE */
  --h2: 2rem;
}

html,
body,
#root {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: var(--main-text);
}

a {
  text-decoration: none;
}

ul,
li {
  margin: 0;
  padding: 0;
  list-style: none;
}

@media (min-width: 300px) {
  :root {
    --h1: 1.25rem;
    --h2: 1rem;
    --h3: 0.85rem;
  }
}

@media (min-width: 600px) {
  :root {
    --h1: 1.5rem;
    --h2: 1.25rem;
    --h3: 1rem;
  }
}

@media (min-width: 960px) {
  :root {
    --h1: 2rem;
    --h2: 1.85rem;
    --h3: 1.3rem;
  }
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.nav-link {
  color: var(--white);
  text-decoration: none;
}

/* === HOME PAGE  === */

.home-page-wrapper {
  padding: 0.5rem;
}

#regions-grid {
  display: flex;
  justify-content: center;
}

.nav-link-regions {
  display: flex;
  justify-content: center;
}

.paper-region-img {
  padding: 1rem;
  border: 2px 2px 2px 0px solid black;
  box-shadow: 6px 8px 15px -1px #000000;
}

.img-region {
  width: 100%;
  height: auto;
  object-fit: cover;
  border-radius: 8px;
}

.region-name {
  text-align: center;
  font-size: var(--h2);
  font-weight: var(--boldest);
  color: var(--black);
}

/*~~~ Navbar component ~~~*/
.home-link-redirect {
  color: var(--white);
}

/* === HOME PAGE END === */

/* === ABOUT PAGE  === */

.about-page-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  min-height: 100vh;
}

.about-page-content-container {
  width: 100%;
  max-width: 800px;
  padding: 30px;
  border-radius: 8px;
  background-color: var(--white);
  text-align: justify;
}

@media (max-width: 768px) {
  .about-page-content-container {
    padding: 20px;
    max-width: 100%;
    border-radius: 0;
    box-shadow: none;
  }
}

.about-page-h1,
.about-page-h2 {
  text-align: center;
  margin: 0.5rem 0;
  color: var(--blue);
}

.about-page-for-developers {
  margin: 0.5rem 0;
}
.about-page-for-developers li {
  list-style-type: disc;
}

.about-page-target-audience span {
  color: var(--blue);
}

/*~~~ About page: icons ~~~*/

.developer-details {
  text-align: center;
  justify-content: center;
  color: var(--dark-gray);
}

.heart-icon,
.github-contact {
  font-size: 1rem;
  color: var(--blue);
  margin: 0 4px;
}

.heart-icon {
  animation: beat 1s infinite;
}

/* the whole container on hover paintsa a heart red */
.about-page-content-container:hover .heart-icon {
  color: #f31f1f;
}

/* animation to scale the heart */
@keyframes beat {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.2);
  }
  100% {
    transform: scale(1);
  }
}

.github-contact {
  animation: coin-flip 1.5s infinite linear;
  display: inline-block;
  transform-origin: center;
}

@keyframes coin-flip {
  0% {
    transform: perspective(1000px) rotateY(0deg);
  }
  50% {
    transform: perspective(1000px) rotateY(180deg);
  }
  100% {
    transform: perspective(1000px) rotateY(360deg);
  }
}

/* === ABOUT PAGE END === */

/* === QUIZ PAGE === */

/* === QUIZ PAGE END === */

/* === REGION PAGE === */

.region-component-wrapper {
  padding: 1rem;
}

.paper-region-info {
  padding: 1rem;
  display: flex;
  flex: 1;
}

.content-paper-region-info {
  display: flex;
  flex-direction: column;
  padding-right: 0.5rem;
}

.regionIcon-regionName {
  display: flex;
  padding-bottom: 1rem;
}

.regionIcon {
  max-width: 35px;
  max-height: auto;
  margin-right: 0.5rem;
}

.regionName {
  font-size: var(--h3);
}

.content-paper-region-location {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}
.locationImg {
  max-width: 100%;
  max-height: auto;
  object-fit: cover;
}

/* location img of a region on the map */

@media screen and (min-width: 768px) {
  .locationImg {
    width: 200px;
    height: auto;
  }
}

.region-map-wrapper {
  display: flex;
  gap: 1.5rem;
  margin-bottom: 1rem;
}

@media (max-width: 768px) {
  .region-map-wrapper {
    flex-direction: column;
  }
}

#municipalities-grid {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.municipality-navigation-buttons-container,
.region-navigation-buttons-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  margin-bottom: 1rem; /* rules for navigation buttons container from Region added here */
}

@media (max-width: 400px) {
  .municipality-navigation-buttons-container {
    flex-direction: column; /* Stack buttons vertically */
  }

  .municipality-navigation-buttons-container button {
    width: 100%; /* Make buttons full-width */
    max-width: 300px; /* Optional: Limit max width */
  }
}

.nav-link-muniipalities {
  display: flex;
  justify-content: center;
}

.imgMunicipality {
  max-width: 100%;
  height: auto;
  align-items: center;
}

.municipality-name {
  text-align: center;
  font-size: var(--h3);
}

.paper-oldMunicipality-content-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.oldMunicipalities-name {
  color: var(--white);
  margin: 2rem;
  text-align: center;
}

.oldMunicipalities-grid {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.oldMunicipalities-img {
  max-width: 100%;
  height: auto;
  align-items: center;
  filter: grayscale(100%);
  transition: filter 0.5s ease;
}

.oldMunicipalities-img:hover {
  filter: grayscale(0%);
}

/* switch off filter for mobile devices */
/*
@media (max-width: 768px) {
  .oldMunicipalities-img {
    filter: none;
  }

  .oldMunicipalities-img:hover {
    filter: none;
  }
}

*/

.previous-municipalities-name {
  text-align: center;
  color: var(--black);
}

/* === REGION PAGE END === */

/* === MUNICIPALITY PAGE === */

.municipality-page-wrapper {
  padding: 1rem;
  min-height: 100vh;
}

.paper-municipality-page {
  margin-bottom: 1rem;
  padding: 1rem;
}

.municipality-card-content {
  display: flex;
  padding-bottom: 1rem;
}

.municipality-img {
  max-width: 35px;
  max-height: auto;
  margin-right: 0.5rem;
}

/*~~~ POPULATION COMPONENT ONLY VALUE FROM STAT.FI ~~~*/
.population-value-statFi {
  margin-left: 5px;
  display: flex;
}
/*~~~ population & temperature components ~~~*/
.mui-icon {
  color: var(--blue);
  margin-right: 0.5rem;
}

.weather-element {
  display: flex;
}

.municipality-img-description-wrapper {
  display: flex;
  gap: 1.5rem;
  margin-bottom: 1rem;
}

@media (max-width: 768px) {
  .municipality-img-description-wrapper {
    flex-direction: column;
  }
}

.blazon,
.designer {
  color: var(--blue);
}

.municipality-full-img {
  max-width: 100%;
  height: auto;
  align-items: center;
  margin: 2rem 0;
}

.municipality-img-content-container {
  margin: 2rem 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.details {
  margin: 2rem;
}

/* MAP COMPONENT, LOCATION OF MUNICIPALITY */

.map-container {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 400px;
  width: 100%;
  max-width: 100%;
  aspect-ratio: 16 / 9;
}

@media (max-width: 768px) {
  .map-container {
    height: 300px;
    aspect-ratio: 4 / 3;
  }
}

@media (max-width: 480px) {
  .map-container {
    height: 200px;
    aspect-ratio: 1 / 1;
  }
}

/* CSS properties written already in Leaflet library, to know class/id names look in browser dev tools */
.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
  background: var(--blue);
}

.leaflet-popup-content-wrapper {
  outline: var(--white) solid 2px;
}

.leaflet-popup-tip {
  border: var(--white) solid 2px;
}

.leaflet-popup-content {
  color: var(--white);
}

/* MAP COMPONENT ENDS*/

/* ERROR PAGE */
#searchError-page-wrpper {
  padding: 0.5rem;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.searchError-img {
  max-width: 100%;
  height: auto;
  margin-bottom: 1rem;
}

.searchError-text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.searchError-error-text {
  text-align: center;
  font-size: var(--h1);
  color: white;
}

.searchError-redirectHome {
  padding: 0 0.5rem;
  background-color: var(--white);
  margin: 0 1rem;
}

.searchError-redirectHome-link {
  color: var(--blue);
}

/* ERROR PAGE ENDS*/

/* FOOTER */
.component-footer-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.component-footer-version-details {
  color: var(--gray);
  margin: 2rem 0 1rem 0;
}
/* FOOTER ENDS */

